[package]
name = "timetracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
